[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/player.png" type="Texture" id=1]
[ext_resource path="res://src/Actors/Player.gd" type="Script" id=2]
[ext_resource path="res://assets/m3x6.ttf" type="DynamicFontData" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 15 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 7, 17 )

[sub_resource type="DynamicFont" id=3]
size = 32
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="Player" type="KinematicBody2D"]
position = Vector2( 0, -16 )
collision_mask = 8
script = ExtResource( 2 )
speed = Vector2( 300, 500 )
gravity = 1000.0
stomp_impulse = 500.0

[node name="player" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_left = 0
limit_top = 0
limit_right = 240
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_speed = 10.0
drag_margin_left = 0.0
drag_margin_right = 0.0

[node name="EnemyDetector" type="Area2D" parent="."]
modulate = Color( 0.431373, 0.356863, 0.8, 1 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetector"]
position = Vector2( 0, -1 )
shape = SubResource( 2 )

[node name="Label" type="Label" parent="."]
margin_left = -16.0
margin_top = -40.0
margin_right = 16.0
margin_bottom = -14.0
custom_fonts/font = SubResource( 3 )
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
one_shot = true
[connection signal="area_entered" from="EnemyDetector" to="." method="_on_EnemyDetector_area_entered"]
[connection signal="body_entered" from="EnemyDetector" to="." method="_on_EnemyDetector_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
